adjusting docker and config, fix CSRF origins

--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,4 @@
 DEBUG=1
 SECRET_KEY=test_this_one
-DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1] .artforge.pl
+DJANGO_ALLOWED_HOSTS=localhost slowotok.artforge.pl
+DJANGO_CSRF_TRUSTED_ORIGINS=https://*.artforge.pl/
