--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,9 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    command: gunicorn -c config/prod.py
+    command: sh -c "python manage.py makemigrations &&
+                    python manage.py migrate && 
+                    gunicorn -c config/prod.py"
     ports:
       - 8001:8000
     env_file:
